--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,8 +11,8 @@ collections:
     folder: "content/blog"
     create: true
     slug: "index"
-    media_folder: "static/media"
-    public_folder: "static/media"
+    media_folder: "media"
+    public_folder: "media"
     path: "{{title}}/index"
     editor:
       preview: false
