--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-catch-links": "^3.6.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-mdx": "^2.6.0",
     "gatsby-plugin-netlify-cms": "^5.6.0",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-images": "^5.3.0",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "netlify-cms-app": "^2.15.17",
     "react": "^17.0.1",
